# Sequential-Directory-Tree

./: Cargo.toml  IMPLEMENTATION_PROMPT.md  README.md  sdt-spec.md  tools.md
.github/workflows/: pages.yml
crates/sdt-cli/: Cargo.toml
crates/sdt-cli/src/: main.rs
crates/sdt-cli/tests/: cli.rs
crates/sdt-core/: Cargo.toml
crates/sdt-core/src/: lib.rs
scripts/: build-pages-site.sh
