[package]
name = "sdt-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "sdt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
sdt-core = { path = "../sdt-core", features = ["serde"] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
